--- a/UC9SA2_encontroremoto2/index.html
+++ b/UC9SA2_encontroremoto2/index.html
@@ -11,6 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap"
         rel="stylesheet">
     <link href="css/estilo.css" rel="stylesheet">
+    <script src="js/jquery.js" defer></script>
 </head>
 
 <body>
@@ -36,7 +37,7 @@
             <a href="#planos" class="chamada__botao botao">Conheça os planos</a>
         </section>
 
-        <section class="destaques container">
+        <section id="carrosel" class="destaques container">
             <h2 class="destaques__titulo"><a name="destaques">Destaques</a></h2>
 
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -213,7 +214,7 @@
 
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="js/script.js"></script> 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
